--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@700&display=swap');
+
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Kumbh Sans', sans-serif;
 }
 
 img {
@@ -19,20 +25,49 @@ body {
   );
 }
 
+.bg-mobile {
+  transform: translateY(-80px);
+}
+
 main {
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* text-align: center; */
+}
+
+.card-hero-container {
+  margin-bottom: -175px;
+  z-index: 1;
+}
+
+.card-header {
+  padding-top: 137px;
+}
+
+.card-body-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  width: 325px;
+  max-width: 325px;
+}
+
+.card-body-container:last-child {
+  padding-bottom: 2rem;
 }
 
 .faq-card-title {
   text-decoration: none;
   color: #000;
+  font-weight: 400;
 }
 
-.open a {
-  font-weight: bold;
+.hidden {
+  display: none;
 }
 
 .icon-open {
